forEnersys/DavePkg/objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Approval_Flag__c</fullName>
        <label>Auto Approval Flag</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Approval_Level_Text__c</field>
            <operation>equals</operation>
            <value>Sales Engineer</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bill_To_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bill To lookup to Account - populated from Opportunity</description>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Bill To)</relationshipLabel>
        <relationshipName>Quotes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Phone__c</fullName>
        <label>Bill To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <formula>BLANKVALUE( SBQQ__Opportunity2__r.Bill_To__r.Name ,   SBQQ__Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To (Delete)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_EMEA__c</fullName>
        <label>Business Area EMEA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_EMEA__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Food Retailers</fullName>
                </value>
                <value>
                    <fullName>Non Food Retailers</fullName>
                </value>
                <value>
                    <fullName>Logistic Operators</fullName>
                </value>
                <value>
                    <fullName>Ports and Warehouses</fullName>
                </value>
                <value>
                    <fullName>FMCG</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Steel and Metal Industry</fullName>
                </value>
                <value>
                    <fullName>Other Industries</fullName>
                </value>
                <value>
                    <fullName>Rotary wing</fullName>
                </value>
                <value>
                    <fullName>Fixed wing</fullName>
                </value>
                <value>
                    <fullName>Fixed wing - narrow body</fullName>
                </value>
                <value>
                    <fullName>Fixed wing - wide body</fullName>
                </value>
                <value>
                    <fullName>Fixed wing - business jet</fullName>
                </value>
                <value>
                    <fullName>Fixed wing - General aviation</fullName>
                </value>
                <value>
                    <fullName>Trucks</fullName>
                </value>
                <value>
                    <fullName>Tank</fullName>
                </value>
                <value>
                    <fullName>Troop carrier</fullName>
                </value>
                <value>
                    <fullName>Armoured car</fullName>
                </value>
                <value>
                    <fullName>Amphibious vehicle</fullName>
                </value>
                <value>
                    <fullName>Armoured engineering vehicle</fullName>
                </value>
                <value>
                    <fullName>Air defence vehicle</fullName>
                </value>
                <value>
                    <fullName>Surface vessel</fullName>
                </value>
                <value>
                    <fullName>Submarine - diesel electric</fullName>
                </value>
                <value>
                    <fullName>Submarine - nuclear</fullName>
                </value>
                <value>
                    <fullName>Small lift launch vehicle</fullName>
                </value>
                <value>
                    <fullName>Medium lift launch vehicle</fullName>
                </value>
                <value>
                    <fullName>Heavy lift launch vehicle</fullName>
                </value>
                <value>
                    <fullName>Super heavy lift launch vehicle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cells__c</fullName>
        <label>Cells</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_s__c</fullName>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AeroVironment</fullName>
                </value>
                <value>
                    <fullName>Alcad</fullName>
                </value>
                <value>
                    <fullName>BAE</fullName>
                </value>
                <value>
                    <fullName>Battery Builder</fullName>
                </value>
                <value>
                    <fullName>Bulldog</fullName>
                </value>
                <value>
                    <fullName>C&amp;D</fullName>
                </value>
                <value>
                    <fullName>Crown</fullName>
                </value>
                <value>
                    <fullName>CSB</fullName>
                </value>
                <value>
                    <fullName>Deka</fullName>
                </value>
                <value>
                    <fullName>East Penn</fullName>
                </value>
                <value>
                    <fullName>Fiamm</fullName>
                </value>
                <value>
                    <fullName>GD Yuasa</fullName>
                </value>
                <value>
                    <fullName>GNB</fullName>
                </value>
                <value>
                    <fullName>GNB/Exide</fullName>
                </value>
                <value>
                    <fullName>Haze</fullName>
                </value>
                <value>
                    <fullName>Hoppecke</fullName>
                </value>
                <value>
                    <fullName>Leoch</fullName>
                </value>
                <value>
                    <fullName>Narada</fullName>
                </value>
                <value>
                    <fullName>Northstar</fullName>
                </value>
                <value>
                    <fullName>Optima</fullName>
                </value>
                <value>
                    <fullName>Ritar</fullName>
                </value>
                <value>
                    <fullName>Saft</fullName>
                </value>
                <value>
                    <fullName>Competitor A</fullName>
                    <isActive>false</isActive>
                    <label>Competitor A</label>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                    <isActive>false</isActive>
                    <label>Competitor B</label>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                    <isActive>false</isActive>
                    <label>Competitor C</label>
                </value>
                <value>
                    <fullName>Competitor D</fullName>
                    <isActive>false</isActive>
                    <label>Competitor D</label>
                </value>
                <value>
                    <fullName>Competitor E</fullName>
                    <isActive>false</isActive>
                    <label>Competitor E</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <label>Connector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractedAccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Contract Pricing From</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (ContractedAccountID)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracted_Price_w_Discount_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag indicates there is at least one line item on this quote that is under a contract price and has been discounted additionally.  This quote is subject to further approval if checked.</inlineHelpText>
        <label>Contracted Price w Discount Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <formula>IF(TEXT(CurrencyIsoCode)=&apos;EUR&apos;, TEXT(CurrencyIsoCode), &apos;EUR&apos;)</formula>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSM_ASM_Approval__c</fullName>
        <label>DSM/ASM Approval</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Approval_Level_Text__c</field>
            <operation>equals</operation>
            <value>DSM/ASM</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deliver_Term_Change_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver Term Change Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms_Text__c</fullName>
        <formula>Delivery_Terms__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Terms Text (for printing)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Terms</label>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Quotes (Delivery Terms)</relationshipLabel>
        <relationshipName>Quotes_Delivery_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms_on_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not Display - field is updated by a PB when the record is created and the delivery terms added to the quote from the account.</inlineHelpText>
        <label>Delivery Terms on Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Estimated_Tax_Flag__c</fullName>
        <formula>IF(OR(ISBLANK(Estimated_Tax_Amount__c),Estimated_Tax_Amount__c = 0), FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Estimated Tax_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Tax_Disclaimer__c</fullName>
        <formula>IF(Display_Estimated_Tax_Flag__c, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Tax Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_EMEA__c</fullName>
        <label>Distribution Channel EMEA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_EMEA__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Power System Provider</fullName>
                </value>
                <value>
                    <fullName>VADs/System Integrator</fullName>
                </value>
                <value>
                    <fullName>Distributor / Agent (excluding VADs)</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Truck Dealer</fullName>
                </value>
                <value>
                    <fullName>Battery Dealers and Distributor</fullName>
                </value>
                <value>
                    <fullName>Key End User</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <formula>Sales_Area_Data__r.Sales_Area_Sales_Organisation_Code__r.Distribution_Channel_Code__c</formula>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Sales_Area_Data__r.Sales_Area_Sales_Organisation_Code__r.Division_Code__c</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Currency__c</fullName>
        <label>Document Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Final_Amount__c</fullName>
        <label>EMEA Final Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Items_Total__c</fullName>
        <label>EMEA Items Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EditLinesFieldSetName__c</fullName>
        <formula>CASE(RecordType.DeveloperName, 
&quot;Americas_Quote&quot;,
CASE(TEXT(SBU__c), &quot;MP - Americas&quot;, &quot;SBQQ__LineEditor&quot;, &quot;RP - Americas&quot;, &quot;RP_Line_Editor&quot;, &quot;SBQQ__LineEditor&quot;),  &quot;Americas_Quote_Approved&quot;,
CASE(TEXT(SBU__c), &quot;MP - Americas&quot;, &quot;SBQQ__LineEditor&quot;, &quot;RP - Americas&quot;, &quot;RP_Line_Editor&quot;, &quot;SBQQ__LineEditor&quot;), &quot;Rental_Quotation&quot;, &quot;Rental_Line_Editor&quot;, &quot;Rental_Quotation_Approved&quot;, &quot;Rental_Line_Editor&quot;, &quot;SBQQ__LineEditor&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EditLinesFieldSetName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Address__c</fullName>
        <formula>SBQQ__Opportunity2__r.End_User__r.BillingStreet &amp;  BR()  &amp; 
 SBQQ__Opportunity2__r.End_User__r.BillingCity &amp; &quot;, &quot; &amp;  SBQQ__Opportunity2__r.End_User__r.BillingState &amp; &quot;, &quot; &amp;   SBQQ__Opportunity2__r.End_User__r.BillingPostalCode  &amp;  BR()  &amp;  SBQQ__Opportunity2__r.End_User__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_City__c</fullName>
        <formula>SBQQ__Opportunity2__r.End_User__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_ID__c</fullName>
        <formula>SBQQ__Opportunity2__r.End_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Phone__c</fullName>
        <formula>CASE(LEN(SBQQ__Opportunity2__r.End_User__r.Phone), 10, LEFT(SBQQ__Opportunity2__r.End_User__r.Phone, 3) &amp; &quot;-&quot; &amp; 
MID(SBQQ__Opportunity2__r.End_User__r.Phone, 4, 3) &amp; &quot;-&quot; &amp;
RIGHT(SBQQ__Opportunity2__r.End_User__r.Phone, 4), SBQQ__Opportunity2__r.End_User__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_State__c</fullName>
        <formula>SBQQ__Opportunity2__r.End_User__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Street__c</fullName>
        <formula>SBQQ__Opportunity2__r.End_User__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Zip__c</fullName>
        <formula>SBQQ__Opportunity2__r.End_User__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (End User)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_temp__c</fullName>
        <label>End User (Delete)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Voltage__c</fullName>
        <label>End Voltage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Approval_Count__c</fullName>
        <description>the number of line items awaiting Engineering Approval</description>
        <label>Engineering Approval Count</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Approval_Code__c</field>
            <operation>notEqual</operation>
            <value>&quot;&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Tax_Amount__c</fullName>
        <description>Will display on the quote if selected and is intended to be an ESTIMATED amount of tax the customer may pay for this quotation</description>
        <inlineHelpText>Will display on the quote if selected and is intended to be an ESTIMATED amount of tax the customer may pay for this quotation</inlineHelpText>
        <label>Estimated Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Value_of_Rental__c</fullName>
        <formula>Length_of_Rental__c *  Total_Monthly_Rental_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Value of Rental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feasability_Study_Approval_Number__c</fullName>
        <label>Feasability Study Approval Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_Study_Approval_Number__c</fullName>
        <label>Feasibility Study Approval Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSM_Dir_Approval__c</fullName>
        <label>GSM\Dir Approval</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Approval_Level_Text__c</field>
            <operation>equals</operation>
            <value>GM/Sales Dir.</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Shipping_Address__c</fullName>
        <formula>IF(ISNULL(SBQQ__ShippingName__c), FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inconterms__c</fullName>
        <formula>IF (OR(Bill_To_Lookup__r.RecordTypeId=&apos;EMEA Customer&apos;,Bill_To_Lookup__r.RecordTypeId =&apos;EMEA Prospect&apos;,Bill_To_Lookup__r.RecordTypeId=&apos;EMEA  Account&apos;), Bill_To_Lookup__r.SAP_Customer_Id__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inconterms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incoterm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Incoterm - IC</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Quotes (Incoterm)</relationshipLabel>
        <relationshipName>Incoterm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incoterms2_Text__c</fullName>
        <label>Incoterms2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incoterms2</label>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Quotes (Incoterms2)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incoterms</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Incoterm - IC</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Quotes (Incoterms)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_EMEA__c</fullName>
        <label>Industry EMEA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Renewables</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Forklifts and Industrial trucks</fullName>
                </value>
                <value>
                    <fullName>AGV-LGV</fullName>
                </value>
                <value>
                    <fullName>Cleaning machines</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Plants</fullName>
                </value>
                <value>
                    <fullName>Other End Users MP</fullName>
                </value>
                <value>
                    <fullName>Rail MP</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Sea</fullName>
                </value>
                <value>
                    <fullName>Space (Launcher)</fullName>
                </value>
                <value>
                    <fullName>BMS [Battery Monitoring System]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSON_Pricing_Conditions__c</fullName>
        <label>JSON Pricing Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KWb__c</fullName>
        <inlineHelpText>Power requirement from the customer</inlineHelpText>
        <label>KWb</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Number__c</fullName>
        <formula>LOB__r.LOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOB</label>
        <referenceTo>LOB__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L_x_W_X_H__c</fullName>
        <label>L x W X H</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Message__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Tag__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Time__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Rental__c</fullName>
        <label>Length of Rental (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager Approver</description>
        <label>Manager Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Approval_Items_Count__c</fullName>
        <label>Marketing Approval Items Count</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Approval_Level_Text__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Marketing_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Marketing Approver</description>
        <label>Marketing Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Class__c</fullName>
        <label>Model\Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_End_User__c</fullName>
        <formula>SBQQ__Opportunity2__r.End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User (Template)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Code__c</fullName>
        <label>Partner Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_SAP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Terms</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria for Payment Terms</errorMessage>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Terms of Payment - TP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Quotes (Payment Terms)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>SBQQ__Account__r.Payment_Terms__r.Name &amp;&quot; (&quot; &amp; SBQQ__Account__r.Payment_Terms__r.Code__c &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoNumber__c</fullName>
        <label>PO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Date__c</fullName>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_First_Name__c</fullName>
        <formula>SBQQ__PrimaryContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Full_Name__c</fullName>
        <formula>SBQQ__PrimaryContact__r.FirstName &amp; &quot; &quot; &amp; SBQQ__PrimaryContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Cover_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Cover Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Descriptions__c</fullName>
        <formula>ISPICKVAL( Product_Detail__c, &quot;Description&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Descriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_End_User_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print End User Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Freight_Disclaimer_MP__c</fullName>
        <formula>AND(NOT ISBLANK(Delivery_Terms__r.Code__c), Delivery_Terms__r.Code__c &lt;&gt; &apos;002&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Freight Disclaimer_MP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Freight_Disclaimer_RP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>prints the freight disclaimer for RP quote.  if unchecked the Freight Disclaimer will not appear on the RP quote</description>
        <inlineHelpText>if unchecked the Freight Disclaimer will not appear on the RP quote</inlineHelpText>
        <label>Print Freight Disclaimer_RP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Introduction_Text_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Introduction Text Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Line_Item_Prices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Line Item Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_List_Prices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print List Prices</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>